--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -6,15 +6,13 @@
     <%= csp_meta_tag %>
     <meta name="keywords" content="<%=@seo_keywords %>"
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
-    <%= render "shared/nav" %>
 
     
     <% if current_user.is_a?(User) %>
@@ -24,6 +22,14 @@
     <%= link_to "Login", new_user_session_path %>
     <% end %>
     <%= yield %>
+
+    <div>
+      <div><%= link_to "Home", root_path %></div>
+      <div><%= link_to "About me", about_me_path %></div>
+      <div><%= link_to "Contact", contact_path %></div>
+      <div><%= link_to "Blog", blogs_path %></div>
+      <div><%= link_to "Portfolio", portfolios_path %></div>
+    </div>
 
     <% if session[:source] %>
       <p>Thanks for visiting me from <%= session[:source] %></p>
