Implemented authorization engine for portfolio items and blogs

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -26,6 +26,8 @@
       <div><%= link_to "Portfolio", portfolios_path %></div>
     </div>
 
+    <%= login_helper %>
+    
     <% if session[:source] %>
       <p>Thanks for visiting me from <%= session[:source] %></p>
     <% end %>
