--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,10 @@
 <h1>CONTACT</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<hr>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Home Address</h3>
+  </div>
+  <div class="col-md-6">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6469.1541183290465!2d76.40226494283665!3d10.138463404336635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b08088a29895277%3A0xbc67dd2da7d9d45b!2sSub+Registrar+Office!5e0!3m2!1sen!2sin!4v1529865673988" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+</div>
