Implemented show page for portfolio

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -20,6 +20,8 @@
 
     <%= yield %>
 
+    <%= render 'shared/portfolio_footer' %>
+
     <% if session[:source] %>
       <p>Thanks for visiting me from <%= session[:source] %></p>
     <% end %>
