--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,8 +1,7 @@
 @import "bootstrap";
 
 body {
-  min-height: 75rem;
-  background-color: #131212; /* Can be removed; just added for demo purposes */
+  min-height: 75rem; /* Can be removed; just added for demo purposes */
 }
 
 .navbar {
