--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="collapse bg-inverse" id="navbarHeader">
+<div class="collapse bg-inverse" id="navbarHeader" style="background-color: #131212;">
   <div class="container">
     <div class="row">
       <div class="col-sm-8 py-4">
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div class="navbar navbar-inverse bg-inverse">
+<div class="navbar navbar-inverse bg-inverse" style="background-color: #131212;">
   <div class="container d-flex justify-content-between">
     <a href="#" class="navbar-brand">Abhinav K Subramanian</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
