--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
 <hr>
 <div class="row">
   <div class="col-md-4">
-    <%= image_tag "800x600.png", width: 300, alt: "Profile Image" %>
+    <%= image_tag "profile_pic.jpg", width: 300, alt: "Profile Image" %>
   </div>
   <div class="col-md-8">
     <p>Find me in app/views/pages/about.html.erb</p>   
