--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,16 @@
 
         <div class="cover-container">
 
-          <div id="background"></div>
+          <%= video_tag(
+            'videobg.mp4',
+            id: 'background',
+            autoplay: true,
+            loop: true,
+            muted: true,
+            poster: 'greybg.jpg'
+            )
+            %>
+
           <%= render "shared/application_nav" %>
 
           <%= yield %>
