implemented initial file uploading system via carrierwave

--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -17,6 +17,16 @@
     <%= form.text_area :body %>
   </div>
 
+  <div class="field">
+    <%= form.label :main_image %>
+    <%= form.file_field :main_image %>
+  </div>
+
+  <div class="field">
+    <%= form.label :thumb_image %>
+    <%= form.file_field :thumb_image %>
+  </div>
+  
   <div class="actions">
     <%= form.submit %>
   </div>
