--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -14,6 +14,8 @@
 
   <body>
     
+    <div id="background"></div>
+    
     <%= render 'shared/portfolio_nav' %>
 
     <%= render 'shared/portfolio_masthead' %>
