--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <div class="row <%= "sortable" if logged_in?(:site_admin) %>">
       <%= render partial: 'portfolio_item', collection: @portfolio_items %>
+      <%= link_to "New Portfolio", new_portfolio_path %>
     </div>
   </div>
 </div>
