lots of changes

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -11,12 +11,10 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
-    
     
     <%= yield %>
+
+    <%= alerts %>
 
     <div>
       <div><%= link_to "Home", root_path %></div>
