--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,4 +4,7 @@
   <p class="lead">
     <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
+  <img src="https://via.placeholder.com/100x50" alt="image">
+  <%= image_tag "https://via.placeholder.com/100x100", alt: "image" %>
+  <%= image_tag "800x600.png", alt: "image", width: "400" %>
 </div>
