--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
       <div class="site-wrapper-inner">
 
-        <div class="cover-container">
+        <div class="cover-container" style="color: black">
 
           <%= video_tag(
             'videobg.mp4',
@@ -32,6 +32,8 @@
           <%= render "shared/application_nav" %>
 
           <%= yield %>
+
+          <%= alerts %>
 
           <% if session[:source] %>
             <p>Thanks for visiting me from <%= session[:source] %></p>
