--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -27,19 +27,21 @@
     <%= form.text_area :body %>
   </div>
 
-  <ul>
-    <%= form.fields_for :technologies do |technology_form| %>
-    <li>
-      <%= technology_form.label :name %>
-      <%= technology_form.text_field :name %>
-    </li>
-    <% end %>
-  </ul>
+  <div class="col-md-12">
+    <h2>Technologies Used:</h2>
+    <div> 
+      <%= form.fields_for :technologies do |technology_form| %>
+        <%= render 'technology_fields', f: technology_form %>
+      <% end %>
+
+      <div>
+        <%= link_to_add_association 'Add Technology', form, :technologies %>
+      </div>
+    </div>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
   </div>
-
-  
 
 <% end %>
