--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-md-7">
-      <%= image_tag @portfolio_item.main_image.url.to_s unless @portfolio_item.main_image.nil? %>
+      <%= image_tag @portfolio_item.main_image.url.to_s, width: '500' unless @portfolio_item.main_image.nil? %>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-5" style="color:white">
       <h1><%= @portfolio_item.title %></h1>
 
       <hr>
