--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -2,11 +2,12 @@
   <div class="inner">
     <h3 class="masthead-brand">Abhinav K Subramanian</h3>
     <nav class="nav nav-masthead">
-      <%= link_to "Home", root_path, class: 'nav-link' %>
-      <%= link_to "About me", about_me_path, class: 'nav-link' %>
-      <%= link_to "Contact", contact_path, class: 'nav-link' %>
-      <%= link_to "Blog", blogs_path, class: 'nav-link' %>
-      <%= link_to "Portfolio", portfolios_path, class: 'nav-link' %>
+      <%= link_to "Home", root_path, class: 'nav-link', style: 'color:darkred' %>
+      <%= link_to "About me", about_me_path, class: 'nav-link', style: 'color:darkred' %>
+      <%= link_to "Contact", contact_path, class: 'nav-link', style: 'color:darkred' %>
+      <%= link_to "Blog", blogs_path, class: 'nav-link', style: 'color:darkred' %>
+      <%= link_to "Portfolio", portfolios_path, class: 'nav-link', style: 'color:darkred' %>
+      <%= link_to "Nested Forms", nestedforms_path, class: 'nav-link', style: 'color:darkred' %>
       <%= login_helper 'nav-link' %>
     </nav>
   </div>
