--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,11 +3,15 @@
     <%= @blog.title %>
   </h2>
 
+  <p>Topic<br>
+    <%= @blog.topic.title %>
+  </p>
+
   <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %> |
   <%= link_to 'Back', blogs_path %>
 
   <p>
-    <%= @blog.body %>
+    <%= markdown @blog.body %>
   </p>
 
   <%= render 'comments/comment_form' %>
