--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,6 +1,7 @@
 <tr>
   <td><%= blog.title %></td>
   <td><%= blog.body %></td>
+  <td><%= blog.created_at.strftime("%d/%m/%Y") %></td>
   <td><%= link_to 'Show', blog %></td>
   <td><%= link_to 'Edit', edit_blog_path(blog) if logged_in?(:site_admin) %></td>
   <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %></td>
