--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Blogs</h1>
 
 <table>
@@ -7,6 +5,7 @@
     <tr>
       <th>Title</th>
       <th>Body</th>
+      <th>Date of Publishing</th>
       <th colspan="3"></th>
     </tr>
   </thead>
