--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,10 @@
+<h1> Comments </h1>
 <div class="comment-card">
   <div class="card">
     <div class="card-block">
+
       <div class="row">
+
         <div class="col-md-1">
            
         </div>
